@@ -1,3 +1,5 @@
+2006/5/12 -- released version 20060512_trunk
+
 2006/5/11 -- released version 20060511_trunk
 
 2006/5/10 -- released version 20060510_trunk
